language/move-compiler/tests/move_check/parser/use_inner_scope_invalid.exp
error[E03002]: unbound module
  ┌─ tests/move_check/parser/use_inner_scope_invalid.move:6:13
  │
6 │         use 0x1::M::foo;
  │             ^^^^^^ Invalid 'use'. Unbound module: '0x1::M'

error[E03005]: unbound unscoped name
  ┌─ tests/move_check/parser/use_inner_scope_invalid.move:7:9
  │
7 │         foo(x)
  │         ^^^ Unbound function 'foo' in current scope

